version/0.10/_sources/examples/02-Performance-Improvements/03-mesh-external-layer-compare.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/02-Performance-Improvements/03-mesh-external-layer-compare.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_02-Performance-Improvements_03-mesh-external-layer-compare.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_02-Performance-Improvements_03-mesh-external-layer-compare.py:


.. _ref_mesh_external_layer_compare_example:

Validate external layer results with the full mesh
==================================================
This example shows postprocessing comparisons based on how results and
the mesh are extracted:

- Results and mesh extracted only on the external layer
- Results and mesh extracted on the entire mesh

The external layer is the layer of solid elements with at least one facet facing the outside of
the geometry.

This feature, available for all types of mechanical simulation, allows you to reduce the size
of both the mesh and extracted data to improve processing performance.
Because larger stresses and strains are usually located on the skin of a model,
computing the results on the external layer provides equivalent maximum values in most cases.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

Perform required imports
------------------------
Perform required imports. This example uses a supplied file that you can
get using the ``examples`` module.

.. GENERATED FROM PYTHON SOURCE LINES 48-52

.. code-block:: Python


    from ansys.dpf import post
    from ansys.dpf.post import examples








.. GENERATED FROM PYTHON SOURCE LINES 53-59

Get ``Simulation`` object
-------------------------
Get the ``Simulation`` object that allows access to the result. The ``Simulation``
object must be instantiated with the path for the result file. For example,
``"C:/Users/user/my_result.rst"`` on Windows or ``"/home/user/my_result.rst"``
on Linux.

.. GENERATED FROM PYTHON SOURCE LINES 59-70

.. code-block:: Python


    example_path = examples.download_crankshaft()
    # to automatically detect the simulation type, use:
    simulation = post.load_simulation(example_path)

    # to enable auto-completion, use the equivalent:
    simulation = post.StaticMechanicalSimulation(example_path)

    # print the simulation to get an overview of what's available
    print(simulation)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Static Mechanical Simulation.


    Data Sources
    ------------------------------
    /opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/ansys/dpf/core/examples/result_files/crankshaft/crankshaft.rst

    DPF Model
    ------------------------------
    Static analysis
    Unit system: MKS: m, kg, N, s, V, A, degC
    Physics Type: Mechanical
    Available results:
         -  displacement: Nodal Displacement
         -  velocity: Nodal Velocity      
         -  acceleration: Nodal Acceleration
         -  reaction_force: Nodal Force   
         -  stress: ElementalNodal Stress 
         -  elemental_volume: Elemental Volume
         -  stiffness_matrix_energy: Elemental Energy-stiffness matrix
         -  artificial_hourglass_energy: Elemental Hourglass Energy
         -  kinetic_energy: Elemental Kinetic Energy
         -  co_energy: Elemental co-energy
         -  incremental_energy: Elemental incremental energy
         -  thermal_dissipation_energy: Elemental thermal dissipation energy
         -  elastic_strain: ElementalNodal Strain
         -  elastic_strain_eqv: ElementalNodal Strain eqv
         -  element_orientations: ElementalNodal Element Euler Angles
         -  structural_temperature: ElementalNodal Structural temperature
    ------------------------------
    DPF  Meshed Region: 
      69762 nodes 
      39315 elements 
      Unit: m 
      With solid (3D) elements
    ------------------------------
    DPF  Time/Freq Support: 
      Number of sets: 3 
    Cumulative     Time (s)       LoadStep       Substep         
    1              1.000000       1              1               
    2              2.000000       1              2               
    3              3.000000       1              3               





.. GENERATED FROM PYTHON SOURCE LINES 71-74

Extract displacement data
-------------------------
Extract displacement data over the entire mesh and on the external layer.

.. GENERATED FROM PYTHON SOURCE LINES 74-87

.. code-block:: Python


    displacement_ext = simulation.displacement(external_layer=True)
    displacement = simulation.displacement()  # default is external_layer=False
    displacement_ext.plot()
    displacement.plot()

    print(
        f"number of nodes with external_layer=True: {len(displacement_ext.index.mesh_index)}"
    )
    print(
        f"number of nodes with external_layer=False: {len(displacement.index.mesh_index)}"
    )




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_001.png
          :alt: 03 mesh external layer compare
          :srcset: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_001.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_002.png
          :alt: 03 mesh external layer compare
          :srcset: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_002.png
          :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    number of nodes with external_layer=True: 64079
    number of nodes with external_layer=False: 69762




.. GENERATED FROM PYTHON SOURCE LINES 88-93

Extract stress and strain data
-------------------------------
Extract stress and elastic strain data over the entire mesh and on the external layer.
You can easily compute averages and invariants on the external layer because the
connectivity of the kept elements remains unchanged.

.. GENERATED FROM PYTHON SOURCE LINES 93-114

.. code-block:: Python


    elemental_stress_ext = simulation.stress_principal_elemental(
        components=[1], external_layer=True
    )
    elemental_stress = simulation.stress_principal_elemental()
    elemental_stress_ext.plot()
    elemental_stress.plot()

    print(
        f"number of elements with external_layer=True: {len(elemental_stress_ext.index.mesh_index)}"
    )
    print(
        f"number of elements with external_layer=False: {len(elemental_stress.index.mesh_index)}"
    )

    elastic_strain_eqv_ext = simulation.elastic_strain_eqv_von_mises_nodal(
        external_layer=True
    )
    elastic_strain_eqv = simulation.elastic_strain_eqv_von_mises_nodal()
    elastic_strain_eqv_ext.plot()
    elastic_strain_eqv.plot()



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_003.png
          :alt: 03 mesh external layer compare
          :srcset: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_003.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_004.png
          :alt: 03 mesh external layer compare
          :srcset: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_004.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_005.png
          :alt: 03 mesh external layer compare
          :srcset: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_005.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_006.png
          :alt: 03 mesh external layer compare
          :srcset: /examples/02-Performance-Improvements/images/sphx_glr_03-mesh-external-layer-compare_006.png
          :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    number of elements with external_layer=True: 31374
    number of elements with external_layer=False: 39315

    (None, <pyvista.plotting.plotter.Plotter object at 0x7fbb80f3ae60>)




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.524 seconds)


.. _sphx_glr_download_examples_02-Performance-Improvements_03-mesh-external-layer-compare.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03-mesh-external-layer-compare.ipynb <03-mesh-external-layer-compare.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03-mesh-external-layer-compare.py <03-mesh-external-layer-compare.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 03-mesh-external-layer-compare.zip <03-mesh-external-layer-compare.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
